--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,38 +1,16 @@
-<div class = "bg-light card col-md-8 m-auto mt-5  p-3" >
-
-  <div class="mb-3 d-flex flex-row justify-content-between">
-    <div>
-        <h5>Post# <%=  @post.id %> by <%= @post.author.name %> </h5> 
+<section class="user-post-comments">
+  <div class="post-user flex-one">
+    <div class="user-flex">
+      <h3 class="post-title"><%= @post.title %> by <%= @user.name %></h3>
+        <small class="user-counters">
+          <p>Comments : <%= @post.comments.size%></p>
+          <p>Likes : <%= @post.likes.size %></p>
+        </small>
     </div>
-
-    <div class="d-flex flex-row justify-content-between" >
-      <p class="text-right"> Likes: <%= @post.likes_counter ? @post.likes_counter : 0  %>&nbsp</p>
-      <p class="text-right"> &nbsp Comments: <%= @post.comments_counter ? @post.comments_counter : 0 %></p>
-    </div>  
+    <p><%= @post.text %> </p>
   </div>
-
-  <div>
-    <%=  @post.text %>
+    <div class="comments-user">
+    <%= render "post_comments", post: @post %> 
   </div>
-</div>
-
-   <div class = "card col-md-8 mt-4 mb-5 m-auto  p-3 d-flex" >
-    <% if @post.comments.length > 0 %>
-      <h3>Comments for post# <%=  @post.id %> </h3>
-        <div>
-            <% @post.comments.each do |comment| %>
-                <p><%= comment.author.name %>: <%= comment.text %></p>
-            <% end %>
-        </div>
-    <% else %>
-      <h3>No comments for post# <%=  @post.id %> </h3>
-    <% end %>
-    </div>
-
-  <div class="row">
-    <div class = "col-md-10 m-auto pb-5 d-flex justify-content-center" >
-      <div class= "mt-4">
-        <%= link_to "See all users", root_url, class:'btn btn-xs btn-outline-success' %>  
-      </div>
-    </div>
-  </div> 
+  <%= link_to "Back", :back , class: "back"%>
+</section>
