Create a form to add post, comment on behalf of user and add like to post

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,14 @@
   </head>
 
   <body>
-  <main>
+       <div>
+  <% if notice %>
+      <h6 class="alert alert-success text-center msg"><%= flash[:notice]%></h6>
+    <% end %>
+    <% if alert %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
+    </div>
     <%= yield %>
-    <main>
   </body>
 </html>
