--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,17 @@
   </head>
 
   <body>
-     <div class="login">
+     <div class="links">
  <% if user_signed_in? %>
   <strong><%= current_user.name %></strong>
   <strong><%= current_user.email %></strong>
-   <%= link_to 'All users', root_path %>
-  <%= link_to 'Edit profile', edit_user_registration_path %> 
+   <%= link_to 'All users | ', root_path %>
+  <%= link_to 'Edit profile | ', edit_user_registration_path %> 
   <%= button_to "Logout", destroy_user_session_path, method: :delete %>
 <% else %>
-   <%= link_to 'All users', root_path %>
-  <%= link_to "Sign up", new_user_registration_path %> 
-  <%= link_to "Login", new_user_session_path %>
+   <%= link_to 'All users | ', root_path %>
+  <%= link_to "Sign up | ", new_user_registration_path %> 
+  <%= link_to "Login ", new_user_session_path %>
 <% end %>
 
 </div>
