--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,9 @@
-<h2>Sign up</h2>
+<div class="sign-up">
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-
+<h2>Sign up</h2>
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
@@ -30,5 +31,5 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+</div>
 
-<%= render "devise/shared/links" %>
