--- a/app/views/posts/_most_recent_comments.html.erb
+++ b/app/views/posts/_most_recent_comments.html.erb
@@ -1,5 +1,8 @@
 <ul class="recent-comments flex-one">
   <% post.most_recent_comments.each do |comment| %>
-  <li><%= comment.author.name %>: <%= comment.text%></li>
+  <li>
+  <%= comment.author.name %>:
+ <%= comment.text%>
+  </li>
   <% end %>
 </ul>
