--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,7 +14,7 @@
           <div class="post-container flex-one">
           <div class="single-post">  
             <%= link_to user_post_path(@user.id, post.id) do %>
-            <h3 class="post-tittle"><%= post.title%></h3>
+            <h3 class="post-title"><%= post.title%></h3>
             <% end %>
             <p><%= post.text%></p>
           </div>
